<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Grid Image Search</string>
    <string name="action_settings">Options</string>
    <string name="button_search">Search</string>
    <string name="search_query">Enter search query</string>
    <string name="title_activity_image_view">ImageViewActivity</string>
    <string name="title_activity_search_options">SearchOptionsActivity</string>
    <string name="advanced_search_options">Advanced Search Options</string>
    <string name="image_size">Image Size</string>
    <string name="image_color">Color Filter</string>
    <string name="image_type">Image Type</string>
    <string name="image_site">Site filter</string>
    <string name="load_more">Load More</string>
    <string name="apply_options">Apply</string>
    <string name="filter_search">Filter:</string>

</resources>
