<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SearchOptionsActivity" >

    <TextView
        android:id="@+id/tfTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/advanced_search_options" />

    <TextView
        android:id="@+id/tvSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tfTitle"
        android:layout_marginTop="16dp"
        android:text="@string/image_size"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etSz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvSize"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/tvSize"
        android:inputType="textAutoCorrect"
        android:ems="10" >

        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/tvColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvSize"
        android:layout_marginTop="16dp"
        android:text="@string/image_color"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvColor"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/tvColor"
        android:inputType="textAutoCorrect"
        android:ems="10" >
    </EditText>
    
    <TextView
        android:id="@+id/tvType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvColor"
        android:layout_marginTop="16dp"
        android:text="@string/image_type"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvType"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/tvType"
        android:inputType="textAutoCorrect"
        android:ems="10" >
    </EditText>
    
    <TextView
        android:id="@+id/tvSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvType"
        android:layout_marginTop="16dp"
        android:text="@string/image_site"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvSite"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/tvSite"
        android:inputType="textAutoCorrect"
        android:ems="10" >
    </EditText>

    <Button
        android:id="@+id/btnApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etSite"
        android:onClick="OnClickApply"
        android:text="@string/apply_options" />
    
</RelativeLayout>
