<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SearchActivity" >

    <EditText
        android:id="@+id/etSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/search_query"
        android:inputType="textAutoCorrect" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etSearch"
        android:layout_alignParentRight="true"
        android:onClick="OnClickImageSeach"
        android:text="@string/button_search" />

    <GridView
        android:id="@+id/gvImageGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSearchMore"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/etSearch"
        android:numColumns="3" >

    </GridView>

    <ImageButton
        android:id="@+id/btnSearchMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="OnClickLoadMore"
        android:contentDescription="@string/load_more"
        android:src="@drawable/ic_action_more" />

    <ImageButton
        android:id="@+id/btnLess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="OnClickLoadLess"
        android:contentDescription="@string/load_more"
        android:src="@drawable/ic_action_less" />

    <TextView
        android:id="@+id/tvFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnLess"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
